c-api/include/draconis_c.h

  // Opaque handle for CacheManager
  typedef struct DracCacheManager DracCacheManager;
  // Error codes matching draconis::utils::error::DracErrorCode
  typedef enum DracErrorCode {
    DRAC_ERROR_API_UNAVAILABLE     = 0,
    DRAC_ERROR_CONFIGURATION_ERROR = 1,
    DRAC_ERROR_CORRUPTED_DATA      = 2,
    DRAC_ERROR_INTERNAL_ERROR      = 3,
    DRAC_ERROR_INVALID_ARGUMENT    = 4,
    DRAC_ERROR_IO_ERROR            = 5,
    DRAC_ERROR_NETWORK_ERROR       = 6,
    DRAC_ERROR_NOT_FOUND           = 7,
    DRAC_ERROR_NOT_SUPPORTED       = 8,
    DRAC_ERROR_OTHER               = 9,
    DRAC_ERROR_OUT_OF_MEMORY       = 10,
    DRAC_ERROR_PARSE_ERROR         = 11,
    DRAC_ERROR_PERMISSION_DENIED   = 12,
    DRAC_ERROR_PERMISSION_REQUIRED = 13,
    DRAC_ERROR_PLATFORM_SPECIFIC   = 14,
    DRAC_ERROR_RESOURCE_EXHAUSTED  = 15,
    DRAC_ERROR_TIMEOUT             = 16,
    DRAC_ERROR_UNAVAILABLE_FEATURE = 17,
    DRAC_SUCCESS                   = 255 // Not an error - operation succeeded
  } DracErrorCode;
  // ============================== //
  //  Plugin System                 //
  // ============================== //

  typedef struct DracPlugin DracPlugin;
  typedef struct DracPluginInfo {
    char* name;
    char* version;
    char* author;
    char* description;
  } DracPluginInfo;
  typedef struct DracPluginInfoList {
    DracPluginInfo* items;
    size_t          count;
  } DracPluginInfoList;
  typedef struct DracPluginField DracPluginField;
  struct DracPluginField {
    char*                key;
    DracPluginFieldValue value;
  };
  typedef struct DracPluginFieldList {
    DracPluginField* items;
    size_t           count;
  } DracPluginFieldList;
  // Plugin data
  DRAC_C_API DracErrorCode DracPluginCollectData(DracPlugin* plugin, DracCacheManager* cache);
  DRAC_C_API DracPluginFieldList DracPluginGetFields(DracPlugin* plugin);
  DRAC_C_API char* DracPluginGetLastError(DracPlugin* plugin);
  // Memory cleanup
  DRAC_C_API void DracFreePluginInfoList(DracPluginInfoList* list);
  DRAC_C_API void DracFreePluginFieldList(DracPluginFieldList* list);