bindings/csharp/Draconis/NativeMethods.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern DracErrorCode DracPluginCollectData(PluginHandle plugin, CacheManagerHandle cache);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern DracPluginFieldList DracPluginGetFields(PluginHandle plugin);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr DracPluginGetLastError(PluginHandle plugin);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void DracFreePluginInfoList(ref DracPluginInfoList list);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void DracFreePluginFieldList(ref DracPluginFieldList list);
}
